remove '.md' from url

--- a/_data/markdown_files.yml
+++ b/_data/markdown_files.yml
@@ -1,6 +1,6 @@
 - date: N/A
   title: report_2024-06-19.md
-  url: report_2024-06-19.md
+  url: report_2024-06-19
 - date: N/A
   title: Index of Markdown Files
-  url: index.md
+  url: index
