--- a/.github/workflows/fetch_and_save_paper_data.yml
+++ b/.github/workflows/fetch_and_save_paper_data.yml
@@ -74,6 +74,7 @@ jobs:
         run: |
           git config --global user.name 'github-actions'
           git config --global user.email 'github-actions@github.com'
+          git pull
           git add reports/
           if [ -n "$(git status --porcelain)" ]; then
             git commit -m 'Update paper reports'
