--- a/_data/markdown_files.yml
+++ b/_data/markdown_files.yml
@@ -1,6 +1,6 @@
-- date: N/A
-  title: report_2024-06-19.md
+- title: Report Latest
+  url: report_latest
+- title: Report 2024-06-21
+  url: report_2024-06-21
+- title: Report 2024-06-19
   url: report_2024-06-19
-- date: N/A
-  title: Index of Markdown Files
-  url: index
