--- a/.github/workflows/fetch_and_save_paper_data.yml
+++ b/.github/workflows/fetch_and_save_paper_data.yml
@@ -84,6 +84,7 @@ jobs:
           fi
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
   update-reports-index:
     needs: generate-report
     runs-on: ubuntu-latest
@@ -95,6 +96,10 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: '3.x'
+      
+      - name: Install dependencies
+        run: |
+          pip install -q -U yaml frontmatter
 
       - name: Update markdown_files.yml 
         run: |
