Update reports index

--- a/_data/markdown_files.yml
+++ b/_data/markdown_files.yml
@@ -1,5 +1,25 @@
 - title: Report Latest
   url: report_latest
+- title: Report 2024-07-01
+  url: report_2024-07-01
+- title: Report 2024-06-30
+  url: report_2024-06-30
+- title: Report 2024-06-29
+  url: report_2024-06-29
+- title: Report 2024-06-28
+  url: report_2024-06-28
+- title: Report 2024-06-27
+  url: report_2024-06-27
+- title: Report 2024-06-26
+  url: report_2024-06-26
+- title: Report 2024-06-25
+  url: report_2024-06-25
+- title: Report 2024-06-24
+  url: report_2024-06-24
+- title: Report 2024-06-23
+  url: report_2024-06-23
+- title: Report 2024-06-22
+  url: report_2024-06-22
 - title: Report 2024-06-21
   url: report_2024-06-21
 - title: Report 2024-06-19
