chore: Update cron schedule for fetching and saving paper data

--- a/.github/workflows/fetch_and_save_paper_data.yml
+++ b/.github/workflows/fetch_and_save_paper_data.yml
@@ -2,7 +2,7 @@ name: Read Papers and Create a Report
 
 on:
   schedule:
-    - cron: '0 0 * * *' # This runs the workflow daily at midnight
+    - cron: '0 0 * * 5' # This runs the workflow weekly on Friday at midnight
   workflow_dispatch: # Allows manual trigger
 
 jobs:
