chore: Update dependencies and workflow for fetching and saving paper data

--- a/.github/workflows/fetch_and_save_paper_data.yml
+++ b/.github/workflows/fetch_and_save_paper_data.yml
@@ -58,7 +58,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          pip install -q -U google-generativeai
+          pip install -q -U google-generativeai python-frontmatter
 
       - name: Generate Report
         env:
