--- a/docs/_data/markdown_files.yml
+++ b/docs/_data/markdown_files.yml
@@ -1,64 +1,64 @@
 - title: Report Latest
-  url: report-latest
+  url: report_latest
 - title: Report 2024-07-20
-  url: report-2024-07-20
+  url: report_2024-07-20
 - title: Report 2024-07-19
-  url: report-2024-07-19
+  url: report_2024-07-19
 - title: Report 2024-07-18
-  url: report-2024-07-18
+  url: report_2024-07-18
 - title: Report 2024-07-17
-  url: report-2024-07-17
+  url: report_2024-07-17
 - title: Report 2024-07-16
-  url: report-2024-07-16
+  url: report_2024-07-16
 - title: Report 2024-07-15
-  url: report-2024-07-15
+  url: report_2024-07-15
 - title: Report 2024-07-14
-  url: report-2024-07-14
+  url: report_2024-07-14
 - title: Report 2024-07-13
-  url: report-2024-07-13
+  url: report_2024-07-13
 - title: Report 2024-07-12
-  url: report-2024-07-12
+  url: report_2024-07-12
 - title: Report 2024-07-11
-  url: report-2024-07-11
+  url: report_2024-07-11
 - title: Report 2024-07-10
-  url: report-2024-07-10
+  url: report_2024-07-10
 - title: Report 2024-07-09
-  url: report-2024-07-09
+  url: report_2024-07-09
 - title: Report 2024-07-08
-  url: report-2024-07-08
+  url: report_2024-07-08
 - title: Report 2024-07-07
-  url: report-2024-07-07
+  url: report_2024-07-07
 - title: Report 2024-07-06
-  url: report-2024-07-06
+  url: report_2024-07-06
 - title: Report 2024-07-05
-  url: report-2024-07-05
+  url: report_2024-07-05
 - title: Report 2024-07-04
-  url: report-2024-07-04
+  url: report_2024-07-04
 - title: Report 2024-07-03
-  url: report-2024-07-03
+  url: report_2024-07-03
 - title: Report 2024-07-02
-  url: report-2024-07-02
+  url: report_2024-07-02
 - title: Report 2024-07-01
-  url: report-2024-07-01
+  url: report_2024-07-01
 - title: Report 2024-06-30
-  url: report-2024-06-30
+  url: report_2024-06-30
 - title: Report 2024-06-29
-  url: report-2024-06-29
+  url: report_2024-06-29
 - title: Report 2024-06-28
-  url: report-2024-06-28
+  url: report_2024-06-28
 - title: Report 2024-06-27
-  url: report-2024-06-27
+  url: report_2024-06-27
 - title: Report 2024-06-26
-  url: report-2024-06-26
+  url: report_2024-06-26
 - title: Report 2024-06-25
-  url: report-2024-06-25
+  url: report_2024-06-25
 - title: Report 2024-06-24
-  url: report-2024-06-24
+  url: report_2024-06-24
 - title: Report 2024-06-23
-  url: report-2024-06-23
+  url: report_2024-06-23
 - title: Report 2024-06-22
-  url: report-2024-06-22
+  url: report_2024-06-22
 - title: Report 2024-06-21
-  url: report-2024-06-21
+  url: report_2024-06-21
 - title: Report 2024-06-19
-  url: report-2024-06-19
+  url: report_2024-06-19
