chore: Update fetch_and_save_paper_data.yml to fetch the latest changes from the main branch

--- a/.github/workflows/fetch_and_save_paper_data.yml
+++ b/.github/workflows/fetch_and_save_paper_data.yml
@@ -50,6 +50,9 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+          ref: main
 
       - name: Set up Python
         uses: actions/setup-python@v2
@@ -91,6 +94,9 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+          ref: main
 
       - name: Set up Python
         uses: actions/setup-python@v2
