Add report and summaries based on paper data from 2024-08-30

--- a/docs/_data/markdown_files.yml
+++ b/docs/_data/markdown_files.yml
@@ -1,5 +1,7 @@
 - title: '2024-09-06'
   url: '2024-09-06'
+- title: '2024-08-30'
+  url: '2024-08-30'
 - title: '2024-08-23'
   url: '2024-08-23'
 - title: '2024-08-16'
