Add new papers and update markdown files for February 28, 2025

--- a/docs/_data/markdown_files.yml
+++ b/docs/_data/markdown_files.yml
@@ -2,6 +2,8 @@
   url: '2025-03-14'
 - title: '2025-03-07'
   url: '2025-03-07'
+- title: '2025-02-28'
+  url: '2025-02-28'
 - title: '2025-02-21'
   url: '2025-02-21'
 - title: '2025-02-07'
