Update paper topics in the prompt

--- a/prompts/_topics.yaml
+++ b/prompts/_topics.yaml
@@ -1,6 +1,6 @@
-- topic: Generative AI for Assisting Software Developers
+- topic: AI for Software Development
   description: |
-    Generative AI, particularly Large Language Models (LLMs), is increasingly being used to assist software developers in various tasks. Some examples include:
+    Generative AI is increasingly being used to assist software developers in various tasks. Some examples include:
     - Code completion and generation: Tools like GitHub Copilot use LLMs to suggest code snippets, complete functions, or even generate entire code blocks based on natural language descriptions.
     - Bug detection and fixing: AI systems can analyze code to identify potential bugs, suggest fixes, or even automatically repair simple issues.
     - Documentation generation: LLMs can help create or improve code documentation by generating summaries, explaining complex functions, or writing API documentation.
@@ -16,23 +16,25 @@
     - Work independently or collaborate with other agents
     - Maintain safety and alignment with human values
 
-- topic: Prompt Engineering Techniques
+- topic: LLM Evaluation Methods
   description: |
-    Prompt engineering involves crafting input prompts to elicit better responses from AI models. Some techniques include:
-    - Chain-of-thought prompting: Encouraging the model to break down complex problems into steps, improving reasoning capabilities.
-    - Few-shot learning: Providing a few examples in the prompt to guide the model's behavior for specific tasks.
-    - Role-playing: Assigning a specific role or persona to the AI to influence its response style and content.
-    - Instruction fine-tuning: Training models on instruction-following datasets to improve their ability to understand and execute specific commands.
+    Evaluating Large Language Models (LLMs) is critical for understanding their capabilities, limitations, and alignment with user needs. Key evaluation methods include:
+    - Benchmarking: Using standardized datasets to assess performance across tasks like text generation, summarization, and question answering.
+    - Human-in-the-loop evaluation: Involving human evaluators to rate outputs for relevance, coherence, and usability.
+    - Robustness testing: Assessing model performance under adversarial inputs or edge cases.
+    - Ethical and bias evaluation: Identifying and mitigating biases in model outputs to ensure fairness and inclusivity.
+    From an HCI perspective, evaluation methods should also consider user satisfaction, trust, and the cognitive load required to interact with the model.
 
-- topic: Human-in-the-loop Machine Learning
+- topic: Reinforcement Learning
   description: |
-    This approach incorporates human feedback into the machine learning process. Examples include:
-    - Active learning: The model identifies uncertain or difficult cases and requests human input to improve its performance.
-    - Reinforcement learning from human feedback: Using human preferences to train reward models, which then guide the AI's behavior.
-    - Interactive labeling: Humans provide labels or corrections for model outputs, which are then used to fine-tune the model.
-    - Collaborative filtering: Combining human expertise with AI recommendations in systems like content moderation.
+    Reinforcement Learning (RL) is a machine learning paradigm where agents learn optimal behaviors by interacting with environments and receiving rewards or penalties. Key aspects include:
+    - Policy optimization: Techniques like Q-learning and actor-critic methods for improving decision-making strategies.
+    - Exploration vs. exploitation: Balancing the need to explore new actions with leveraging known rewards.
+    - Multi-agent RL: Studying interactions and cooperation between multiple agents in shared environments.
+    - Novel agent environment design: Creating innovative and adaptive environments that challenge agents and facilitate learning of complex behaviors.
+    From an HCI perspective, RL research explores how humans can effectively guide agent learning, interpret agent behaviors, and design environments that facilitate intuitive human-agent collaboration.
 
-- topic: Techniques for Explaining AI Behavior
+- topic: Explainable AI
   description: |
     Explainable AI (XAI) aims to make AI decision-making processes more transparent and interpretable. Some techniques include:
     - LIME (Local Interpretable Model-agnostic Explanations): Providing local explanations for individual predictions by perturbing input features.
@@ -40,3 +42,4 @@
     - Attention visualization: In models like transformers, visualizing attention weights to show which parts of the input the model focuses on.
     - Counterfactual explanations: Showing how changes in input would affect the output, helping users understand decision boundaries.
     - Rule extraction: Deriving human-readable rules from complex models to approximate their behavior.
+
